--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "toaster": "^0.1.2",
     "url-loader": "^0.5.7",
     "vue-loader": "^11.1.4",
+    "vue-router": "^2.3.0",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.1",
