--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "vue-router": "^2.3.0",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.1",
+    "vuex": "^2.2.1",
+    "vuex-router-sync": "^4.1.2",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
